# FootySim

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
src/footysim/: __init__.py  cli.py
src/footysim/core/: config.py  exceptions.py  logging.py
src/footysim/db/: base.py  session.py
src/footysim/models/: __init__.py  club.py  country.py  fixture.py  goal.py  league.py  match.py  player.py  season.py  stadium.py  transfer.py
src/footysim/repositories/: base.py  clubs.py  fixtures.py  matches.py  players.py
src/footysim/seeds/: seed_data.py
src/footysim/services/: match_engine.py  players_service.py  schedule_service.py  table_service.py
tests/: conftest.py  test_match_engine.py  test_models.py  test_table_service.py
