[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footysim"
version = "0.1.0"
description = "FootySim — SQLAlchemy 2.0 async demo"
authors = [{name="You"}]
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "typer>=0.12.0",
  "pydantic>=2.0",
  "aiosqlite>=0.20.0",
  "greenlet>=3.0"
]

[project.optional-dependencies]
mysql = ["aiomysql>=0.2.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
