[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footysim"
version = "0.1.0"
description = "FootySim — SQLAlchemy 2.0 async demo"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "You" }]
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "typer>=0.12.0",
  "pydantic>=2.0",
  "aiosqlite>=0.20.0",
  "greenlet>=3.0"
]

# Ex: pip install .[mysql]
[project.optional-dependencies]
mysql = ["aiomysql>=0.2.0"]

[project.urls]
Homepage = "https://github.com/youruser/FootySim"
Issues = "https://github.com/youruser/FootySim/issues"

# Installe une commande 'footysim' (équivalent à: python -m footysim.cli)
[project.scripts]
footysim = "footysim.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# (Optionnel) inclure des fichiers non-Python si MANIFEST.in n’est pas utilisé
[tool.setuptools.package-data]
footysim = ["py.typed"]

# (Optionnel) config pytest si tu en veux une intégrée
[tool.pytest.ini_options]
testpaths = ["tests"]
